Git ignore file, more team members

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ const TEAM_MEMBERS = [
   'allysonjp715',
   'attwad',
   'axmb',
+  'iamleeg',
   'katelynnobrien',
   'khmoran',
   'leslieleland',
