Some minor styling

--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@ html {
 
 body {
   background-color: white;
-  margin: 20px;
-  padding: 10px;
+  margin: 3ex;
+  padding: 8ex;
 }
 
 h1 {
   color: #65a1da;
+}
+
+h2 {
+  color: #49bc4e;
+}
+
+ul {
+  padding: 0;
 }
 
 #team {
@@ -46,6 +54,8 @@ h1 {
 <body onload="listTeam()">
 
 <h1>Global Health Data Science Initiative</h1>
+
+<h2>Team</h2>
 
 <ul id="team"></ul>
 
