Add more team members

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ const TEAM_MEMBERS = {
   'attwad': 'Timothé Faudot',
   'axmb': 'Alex Benjamin',
   'iamleeg': 'Graham Lee',
+  'JaredHawkins': 'Jared Hawkins',
   'katelynnobrien': 'Katelynn O\'Brien',
   'khmoran': 'Kelly Moran',
   'leslieleland': 'Leslie Leland',
