Add more team members

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ const TEAM_MEMBERS = {
   'allysonjp715': 'Allyson Pemberton',
   'attwad': 'Timothé Faudot',
   'axmb': 'Alex Benjamin',
+  'gtuli': 'Gaurav Tuli',
   'iamleeg': 'Graham Lee',
   'JaredHawkins': 'Jared Hawkins',
   'katelynnobrien': 'Katelynn O\'Brien',
