Adding more teammates

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ const TEAM_MEMBERS = {
   'mougk': 'Moritz Krämer',
   'rasmi': 'Rasmi Elasmar',
   'scarpino': 'Sam Scarpino',
+  'SpencerMarks-IDHA': 'Spencer Marks',
   'sratcliffe118': 'Stephen Ratcliffe',
   'tbrewer-healthmap': 'Thomas Brewer'
 };
