Fix teammate spelling

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ const TEAM_MEMBERS = {
   'khmoran': 'Kelly Moran',
   'leslieleland': 'Leslie Leland',
   'lmanul': 'Manu Cornet',
-  'mougk': 'Moritz Krämer',
+  'mougk': 'Moritz Kraemer',
   'rasmi': 'Rasmi Elasmar',
   'scarpino': 'Sam Scarpino',
   'SpencerMarks-IDHA': 'Spencer Marks',
