Add mission statement

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@ ul {
 
 <h1>Global Health Data Science Initiative</h1>
 
+<h2>Mission statement</h2>
+
+<p>Enable rapid sharing of trusted and open public health data to advance the response to infectious diseases.</p>
+
 <h2>Team</h2>
 
 <ul id="team"></ul>
