Add link to COVID-19 git repo

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@ ul {
 
 <p>Enable rapid sharing of trusted and open public health data to advance the response to infectious diseases.</p>
 
+<h2>Data and source code</h2>
+
+* [https://github.com/beoutbreakprepared/nCoV2019](COVID-19)
+
 <h2>Team</h2>
 
 (Click to copy the GitHub handle into your clipboard)
