Minor style changes

--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@ body {
   padding: 8ex;
 }
 
+body a {
+  color: #6495ED;
+  text-decoration: none;
+}
+
 h1 {
-  color: #65a1da;
+  color: #6495ED;
 }
 
 h2 {
-  color: #49bc4e;
+  color: #FB9533;
 }
 
 ul {
@@ -49,7 +54,7 @@ ul {
 }
 
 #clipboard-notice {
-  background-color: #65a1da;
+  background-color: #6495ED;
   border-radius: 4px;
   color: white;
   visibility: hidden;
@@ -72,7 +77,8 @@ ul {
 
 <h2>Data and source code</h2>
 
-* [https://github.com/beoutbreakprepared/nCoV2019](COVID-19)
+<ul>
+<li><a href="https://github.com/beoutbreakprepared/nCoV2019">COVID-19</a></li>
 
 <h2>Team</h2>
 
