--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ ul {
 
 <p>Enable rapid sharing of trusted and open public health data to advance the response to infectious diseases.</p>
 
-<h2>Data and source code</h2>
+<h2>Open data and source code</h2>
 
 <ul>
 <li><a href="https://github.com/beoutbreakprepared/nCoV2019">COVID-19</a></li>
