Add more team members

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ const TEAM_MEMBERS = {
   'mougk': 'Moritz Kraemer',
   'rasmi': 'Rasmi Elasmar',
   'scarpino': 'Sam Scarpino',
+  'shrutiwithoutghhandleyet': 'Shruti Chandra',
   'SpencerMarks-IDHA': 'Spencer Marks',
   'sratcliffe118': 'Stephen Ratcliffe',
   'tbrewer-healthmap': 'Thomas Brewer'
