Adding more team members

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ ul {
 <script>
 
 const TEAM_MEMBERS = {
+  'aaroncanstlerwithoutghhandleyet': 'Aaron Cansler',
   'allysonjp715': 'Allyson Pemberton',
   'attwad': 'Timothé Faudot',
   'axmb': 'Alex Benjamin',
