Add a link to the newest covid-19 page

--- a/index.html
+++ b/index.html
@@ -75,10 +75,17 @@ ul {
 
 <p>Enable rapid sharing of trusted and open public health data to advance the response to infectious diseases.</p>
 
+<h2>Diseases</h2>
+
+<ul>
+<li><a href="http://covid-19.ghdsi.org">covid-19</a></li>
+</ul>
+
 <h2>Open data and source code</h2>
 
 <ul>
-<li><a href="https://github.com/beoutbreakprepared/nCoV2019">COVID-19</a></li>
+<li><a href="https://github.com/beoutbreakprepared/nCoV2019">covid-19</a></li>
+</ul>
 
 <h2>Team</h2>
 
