Adding more teammates

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ const TEAM_MEMBERS = {
   'JaredHawkins': 'Jared Hawkins',
   'katelynnobrien': 'Katelynn O\'Brien',
   'khmoran': 'Kelly Moran',
+  'dakrownie': "Kernie Obimakinde",
   'leslieleland': 'Leslie Leland',
   'lmanul': 'Manu Cornet',
   'mougk': 'Moritz Kraemer',
